--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -3,7 +3,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <?php echo $this->headTitle('ZF2 '. $this->translate('Skeleton Application'))->setSeparator(' - ')->setAutoEscape(false) ?>
+        <?php
+            echo $this->headTitle()->prepend($this->translate('sfphp.org'))
+                ->setSeparator(' - ')
+                ->setAutoEscape(false)
+                ;
+        ?>
 
         <?php echo $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -17,7 +22,7 @@
             ->appendStylesheet($this->basePath() . '/bower_components/angular-busy/dist/angular-busy.css')
             ->appendStylesheet($this->basePath() . '/bower_components/angular-loading-bar/build/loading-bar.css')
             ->appendStylesheet($this->basePath() . '/bower_components/angular-bootstrap-lightbox/dist/angular-bootstrap-lightbox.css')
-            ->appendStylesheet('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
+            ->appendStylesheet($this->basePath() . '/bower_components/font-awesome/css/font-awesome.min.css')
             ->appendStylesheet($this->basePath() . '/css/style.css')
             ;
         ?>
@@ -56,7 +61,18 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
+                    <?php
+                    // Fetch all published pages
+                    foreach ($this->getPages(null, true) as $page) {
+                    ?>
+                        <li><a href="<?= $this->url('page', ['url-identifier' => $page->getUrlIdentifier()]) ?>"><?= $this->escapeHtml($page->getTitle()); ?></a></li>
+                    <?php
+                    }
+                    ?>
+
+                        <li><a href="<?= $this->url('admin') ?>">Administration</a></li>
                     </ul>
+
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
