--- a/module/ContentManagement/view/content-management/page/edit.phtml
+++ b/module/ContentManagement/view/content-management/page/edit.phtml
@@ -1,3 +1,8 @@
+<?php
+    $this->headTitle('Edit Page');
+    $this->headTitle($page->getTitle());
+?>
+
 <h1>Edit Page</h1>
 
 <?php
@@ -7,6 +12,22 @@ $form->prepare();
 echo $this->form()->openTag($form);
 
 ?>
+
+<div class="form-container container">
+    <div class="col-md-12">
+<?php
+
+echo $this->formLabel($form->get('urlIdentifier'));
+echo $this->formText($form->get('urlIdentifier'));
+echo $this->formElementErrors()
+    ->setMessageOpenFormat('<div class="alert alert-danger alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><ul><li>')
+    ->setMessageSeparatorString('</li><li>')
+    ->setMessageCloseString('</li></ul></div>')
+    ->render($form->get('urlIdentifier'));
+?>
+    </div>
+</div>
+
 
 <div class="form-container container">
     <div class="col-md-12">
@@ -32,6 +53,20 @@ echo $this->formElementErrors()
     ->setMessageSeparatorString('</li><li>')
     ->setMessageCloseString('</li></ul></div>')
     ->render($form->get('description'));
+?>
+    </div>
+</div>
+
+<div class="form-container container">
+    <div class="col-md-12">
+<?php
+echo $this->formLabel($form->get('sort'));
+echo $this->formText($form->get('sort'));
+echo $this->formElementErrors()
+    ->setMessageOpenFormat('<div class="alert alert-danger alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><ul><li>')
+    ->setMessageSeparatorString('</li><li>')
+    ->setMessageCloseString('</li></ul></div>')
+    ->render($form->get('sort'));
 ?>
     </div>
 </div>
