Added Meetup OAuth2 Authentication

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -70,6 +70,7 @@
                     }
                     ?>
 
+                        <li><a href="<?= $this->url('member/login') ?>">Login</a></li>
                         <li><a href="<?= $this->url('admin') ?>">Administration</a></li>
                     </ul>
 
