--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -58,6 +58,7 @@
                     </button>
                     <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a>
                 </div>
+
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
@@ -69,9 +70,13 @@
                     <?php
                     }
                     ?>
-
-                        <li><a href="<?= $this->url('member/login') ?>">Login</a></li>
                         <li><a href="<?= $this->url('admin') ?>">Administration</a></li>
+
+                        <?php if ($this->identity()) { ?>
+                            <li><a href="<?= $this->url('member/logout') ?>">Logout</a></li>
+                        <?php } else { ?>
+                            <li><a href="<?= $this->url('member/login') ?>">Login</a></li>
+                        <?php } ?>
                     </ul>
 
                 </div><!--/.nav-collapse -->
