--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -94,7 +94,15 @@
                     <?php
                     }
                     ?>
+
+                    <?php
+                    if ($this->isAllowed('administration', 'access')) {
+                    ?>
                         <li><a href="<?= $this->url('admin') ?>">Administration</a></li>
+                    <?php
+                    }
+                    ?>
+
                     </ul>
 
                 </div><!--/.nav-collapse -->
