Added auditing, improved authentication and auth

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -99,6 +99,7 @@
                     if ($this->isAllowed('administration', 'access')) {
                     ?>
                         <li><a href="<?= $this->url('admin') ?>">Administration</a></li>
+                        <li><a href="<?= $this->url('audit'); ?>">Auditing</a></li>
                     <?php
                     }
                     ?>
